<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaz.Activities.HistorialAcademicoActivity"
    android:id="@+id/historialAcademicoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/tamaño_appbar"
        android:background="#ff7043"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.Macchiato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Historial Academico"
            android:textColor="@color/black"
            android:textSize="@dimen/tamaño_titulo_appbar"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="Materias Aprobadas"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lista_MateriasAprobadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="Materias Reprobadas"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/list_materiasReprobadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_MateriasAprobadas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_materiasReprobadas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/floatingHistorialAcademico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_MateriasAprobadas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </androidx.recyclerview.widget.RecyclerView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatingHistorialAcademico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:foregroundGravity="right"
        app:fabSize="mini"
        app:fab_addButtonColorNormal="?attr/colorAccent"
        app:fab_addButtonColorPressed="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addn">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/aniadir_floating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_colorPressed="?attr/colorAccent"
            app:fab_icon="@drawable/addn"
            app:fab_size="mini"
            app:fab_title="Favorito" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_colorPressed="?attr/colorAccent"
            app:fab_icon="@drawable/substract"
            app:fab_size="mini"
            app:fab_title="Favorito" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/ver_Estadisticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_colorPressed="?attr/colorAccent"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_analitica"
            app:fab_title="Favorito" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>



</androidx.constraintlayout.widget.ConstraintLayout>