...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/promedio_nota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/txt_nivel"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_dialog"
            app:layout_constraintBottom_toTopOf="@+id/materia_vista"
            app:layout_constraintEnd_toStartOf="@+id/nivel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/nivel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/materia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/promedio_nota"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/materia_vista"
...
            app:layout_constraintTop_toBottomOf="@+id/promedio_nota" />

        <Spinner
            android:id="@+id/materia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materia_vista"
            app:layout_constraintTop_toBottomOf="@+id/nivel" />

        <TextView
            android:id="@+id/nota_vista"
...
