...

    <item android:id="@+id/nav_ajustes"

        android:icon="@drawable/ic_configuraciones">
    </item>

    <item android:id="@+id/nav_perfil"

        android:icon="@drawable/ic_usuario">
    </item>


</menu>
